[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bevy = { version = "0.15.0" }
bevy-tokio-tasks = "0.15.0"
bevy_landmass = "0.8.0"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
lightyear = "0.19.0"
lobby-server = { version = "0.1.0", path = "../lobby-server" }
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.13", features = ["v4"] }
wtransport = { version = "0.5.0", features = ["dangerous-configuration"] }