[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
# bevy = { git = "https://github.com/bevyengine/bevy.git", version = "0.15.0-dev" }
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-tokio-tasks = "0.15.0"
bevy_cosmic_edit = { git = "https://github.com/Dimchikkk/bevy_cosmic_edit.git", version = "0.26.0" }
bevy_landmass = "0.8.0"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
lightyear = "0.18.0"
lobby-server = { version = "0.1.0", path = "../lobby-server" }
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
wtransport = { version = "0.5.0", features = ["dangerous-configuration"] }
