[package]
name = "lobby-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
ctrlc = "3.4.5"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
wtransport = { version = "0.5.0", features = ["dangerous-configuration"] }
